--- a/pressley/requirements.txt
+++ b/pressley/requirements.txt
@@ -9,6 +9,7 @@ gevent==0.13.7
 greenlet==0.4.0
 httplib2==0.7.4
 lxml==2.3.4
+mimeparse==0.1.3
 oauthlib==0.1.3
 pyasn1==0.1.3
 python-dateutil==2.1
