--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pip>=1.3
 Django==1.4
 django-extensions==0.7.1
 MySQL-python==1.2.3
@@ -14,8 +15,8 @@ mimeparse==0.1.3
 oauthlib==0.1.3
 pyasn1==0.1.3
 python-dateutil==2.1
--e git://github.com/sunlightlabs/python-superfastmatch.git@bc0e531e7cb40c8f749cf347dcc8eac1bdbfd12c#egg=python_superfastmatch-dev
-readability-lxml==0.2.6.1
+git+git://github.com/sunlightlabs/python-superfastmatch.git@bc0e531e7cb40c8f749cf347dcc8eac1bdbfd12c#egg=python_superfastmatch-dev
+git+https://github.com/gfxmonk/python-readability.git#egg=readability-lxml
 requests==0.12.1
 rsa==3.0.1
 six==1.1.0
