--- a/pressley/requirements.txt
+++ b/pressley/requirements.txt
@@ -12,7 +12,7 @@ lxml==2.3.4
 oauthlib==0.1.3
 pyasn1==0.1.3
 python-dateutil==2.1
--e git://github.com/sunlightlabs/python-superfastmatch.git@bc0e531e7cb40c8f749cf347dcc8eac1bdbfd12c#egg=python_superfastmatch-dev
+git+git://github.com/sunlightlabs/python-superfastmatch.git@master#egg=python_superfastmatch
 readability-lxml==0.2.5
 requests==0.12.1
 rsa==3.0.1
@@ -20,4 +20,4 @@ six==1.1.0
 stream==0.8
 uWSGI==1.2.4
 wsgiref==0.1.2
-feedparser==5.1.2
+pytz==2013.9
